Fix images flickering when hovered in blog posts
This fix sets `filter` on all states, so that the browsers compute
the selectable area in the same way regardless of the element's
hover state.

--- a/themes/godotengine/assets/css/main.css
+++ b/themes/godotengine/assets/css/main.css
@@ -187,6 +187,13 @@ body a {
   transition: 0.1s filter;
 }
 
+body a,
+a.btn.flat {
+  /* Use `filter` on all states to prevent the clickable area from changing */
+  /* when an image is hovered (see GH-369). */
+  filter: brightness(100%);
+}
+
 body a:hover,
 a.btn.flat:hover {
   filter: brightness(117.5%);
